--- a/head.html
+++ b/head.html
@@ -1,2 +1,7 @@
 <link rel="stylesheet" href="../style/table-style.css">
+<link rel="stylesheet" href="../style/pagination-style.css">
+<link rel="stylesheet" href="../style/search-style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="" crossorigin="anonymous" />
+
+
+
