--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
 
-<h1 style="text-align: center;">CRUD with filtering, sorting and pagination feature without external libraries</h1>
+<h1 style="text-align: center;">CRUD with filtering, sorting and pagination</h1>
 
 <a href="customer/user-list.php">User list</a>
